--- a/README.adoc
+++ b/README.adoc
@@ -183,8 +183,8 @@ served are now more meaningful:
 
 
 OpenAPI annotations can also be added to POJOs to describe what they represent. Currently, your OpenAPI
-document doesn't have a very meaningful description of the [hotspot=InventoryList file=1]`InventoryList` POJO and hence it's very
-difficult to tell exactly what that POJO is used for. To describe the [hotspot=InventoryList file=1]`InventoryList` POJO in more detail, augment the
+document doesn't have a very meaningful description of the [hotspot=InventoryListClass file=1]`InventoryList` POJO and hence it's very
+difficult to tell exactly what that POJO is used for. To describe the [hotspot=InventoryListClass file=1]`InventoryList` POJO in more detail, augment the
 `src/main/java/io/openliberty/guides/inventory/model/InventoryList.java` file with some OpenAPI annotations.
 
 [role='code_command hotspot file=1', subs="quotes"]
@@ -377,7 +377,7 @@ openapi.yaml
 include::finish/src/main/webapp/META-INF/openapi.yaml[]
 ----
 
-Since this document is complete, you can also set the [hotspot file=0]`mp.openapi.scan.disable` property
+Since this document is complete, you can also set the [hotspot=Scan file=1]`mp.openapi.scan.disable` property
 to `true` in the [hotspot file=1]`src/main/webapp/META-INF/microprofile-config.properties` file.
 
 [role="code_command hotspot file=1", subs="quotes"]
