--- a/README.adoc
+++ b/README.adoc
@@ -357,10 +357,7 @@ might be fully or partially complete. If the document is fully complete, then yo
 annotation scanning entirely by setting the `mp.openapi.scan.disable` MicroProfile Config property to `true`.
 If the document is partially complete, then you can augment it with code.
 
-You can find a complete OpenAPI document in the [hotspot file=0]`src/main/webapp/META-INF/openapi.yaml` file.
-This document is the same as your current OpenAPI document with additional APIs for the `/inventory/properties`
-endpoint. To make use of this document, open this document in your favorite text editor and uncomment
-all of its lines. 
+To use pregenerated OpenAPI documents first create the complete OpenAPI document.
 
 [role="code_command hotspot file=0", subs="quotes"]
 ----
@@ -375,6 +372,7 @@ openapi.yaml
 include::finish/src/main/webapp/META-INF/openapi.yaml[]
 ----
 
+This document is the same as your current OpenAPI document with additional APIs for the `/inventory/properties` endpoint. 
 Since this document is complete, you can also add the [hotspot=Scan file=1]`mp.openapi.scan.disable` property
 and set it to `true` in the [hotspot file=1]`src/main/webapp/META-INF/microprofile-config.properties` file.
 
