--- a/README.adoc
+++ b/README.adoc
@@ -67,9 +67,20 @@ include::{common-includes}/gitclone.adoc[]
 [role='command']
 include::{common-includes}/twyb-intro.adoc[]
 
-Next, point your browser to the {openapi-url}[{openapi-url}^] URL and you'll see the RESTful APIs of the `inventory`
-service. You can also point to the {openapi-url}/ui[{openapi-url}/ui^] URL for a more interactive view of the deployed APIs.
+Next, point your browser to the {openapi-url}[{openapi-url}^] URL and you'll see the RESTful APIs of the `inventory` service.
+
+ifndef::cloud-hosted[]
+You can also point to the {openapi-url}/ui[{openapi-url}/ui^] URL for a more interactive view of the deployed APIs.
 This UI is built from the https://swagger.io/tools/swagger-ui/[Open Source Swagger UI^] and renders the generated `/openapi` document into a very user friendly page.
+endif::[]
+
+ifdef::cloud-hosted[]
+A UI is also available for a more interactive view of the deployed APIs.
+To enable the UI, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number 
+and click the **OK** button. You’re redirected to the **`https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai`** URL, 
+where **accountname** is your account name. Click the **Log in** link on the welcome page. 
+This UI is built from the https://swagger.io/tools/swagger-ui/[Open Source Swagger UI^] and renders the generated `/openapi` document into a very user friendly page.
+endif::[]
 
 [role='command']
 include::{common-includes}/twyb-end.adoc[]
@@ -95,9 +106,17 @@ Because the JAX-RS framework handles basic API generation for JAX-RS annotations
 tree will be generated from the `inventory` service. You can use this tree as a starting point and
 augment it with annotations and code to produce a complete OpenAPI document.
 
-Now, point to the {openapi-url}[{openapi-url}^] URL to see the generated OpenAPI tree. You can also point to the
-{openapi-url}/ui[{openapi-url}/ui^] URL for a more interactive view of the APIs.
+Now, point to the {openapi-url}[{openapi-url}^] URL to see the generated OpenAPI tree. 
 
+ifndef::cloud-hosted[]
+You can also point to the {openapi-url}/ui[{openapi-url}/ui^] URL for a more interactive view of the APIs.
+endif::[]
+
+ifdef::cloud-hosted[]
+To enable the UI for a more interactive view of the APIs, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number 
+and click the **OK** button. You’re redirected to the **`https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai`** URL, 
+where **accountname** is your account name. Click the **Log in** link on the welcome page. 
+endif::[]
 
 === Augmenting the existing JAX-RS annotations with OpenAPI annotations
 
@@ -136,9 +155,8 @@ optional, but it can be helpful to organize a method with multiple responses.
 |===
 
 Since the Open Liberty server was started in development mode at the beginning of the guide, your changes were automatically picked up.
-Refresh the {openapi-url}[{openapi-url}^]
-URL to see the updated OpenAPI tree. The two endpoints at which your JAX-RS methods are
-served are now more meaningful:
+Refresh the {openapi-url}[{openapi-url}^] URL to see the updated OpenAPI tree. 
+The two endpoints at which your JAX-RS methods are served are now more meaningful:
 
 [source, YAML, role="no_copy"]
 ----
