added colon to command instructions

--- a/README.adoc
+++ b/README.adoc
@@ -77,7 +77,7 @@ endif::[]
 ifdef::cloud-hosted[]
 To open a new command-line session, select **Terminal** > **New Terminal** from the menu of the IDE.
 
-Next, run the following curl command to see the RESTful APIs of the `inventory` service.
+Next, run the following curl command to see the RESTful APIs of the `inventory` service:
 ```
 curl http://localhost:9080/openapi
 ```
@@ -122,7 +122,7 @@ You can also point to the {openapi-url}/ui[{openapi-url}/ui^] URL for a more int
 endif::[]
 
 ifdef::cloud-hosted[]
-Now, run the following curl command to see the generated OpenAPI tree.
+Now, run the following curl command to see the generated OpenAPI tree:
 ```
 curl http://localhost:9080/openapi
 ```
@@ -177,7 +177,7 @@ endif::[]
 
 ifdef::cloud-hosted[]
 Since the Open Liberty server was started in development mode at the beginning of the guide, your changes were automatically picked up. 
-Run the following curl command to see the updated OpenAPI tree.
+Run the following curl command to see the updated OpenAPI tree:
 ```
 curl http://localhost:9080/openapi
 ```
@@ -271,7 +271,7 @@ Refresh the {openapi-url}[{openapi-url}^] URL to see the updated OpenAPI tree:
 endif::[]
 
 ifdef::cloud-hosted[]
-Run the following curl command to see the updated OpenAPI tree.
+Run the following curl command to see the updated OpenAPI tree:
 ```
 curl http://localhost:9080/openapi
 ```
@@ -370,7 +370,7 @@ Refresh the {openapi-url}[{openapi-url}^] URL to see the updated OpenAPI tree:
 endif::[]
 
 ifdef::cloud-hosted[]
-Run the following curl command to see the updated OpenAPI tree.
+Run the following curl command to see the updated OpenAPI tree:
 ```
 curl http://localhost:9080/openapi
 ```
@@ -462,7 +462,7 @@ Refresh the {openapi-url}[{openapi-url}^] URL to see the updated OpenAPI tree:
 endif::[]
 
 ifdef::cloud-hosted[]
-Run the following curl command to see the updated OpenAPI tree.
+Run the following curl command to see the updated OpenAPI tree:
 ```
 curl http://localhost:9080/openapi
 ```
