--- a/README.adoc
+++ b/README.adoc
@@ -27,11 +27,9 @@ NOTE: This repository contains the guide documentation source. To view the guide
 
 Explore how to document and filter RESTful APIs from code or static files by using MicroProfile OpenAPI.
 
-
 :openapi-url: http://localhost:9080/openapi
 :inv-url: http://localhost:9080/inventory/systems
 :sys-url: http://localhost:9080/inventory/properties
-
 
 == What you'll learn
 
@@ -84,11 +82,13 @@ curl http://localhost:9080/openapi
 {: codeblock}
 
 A UI is also available for a more interactive view of the deployed APIs.
-To visit the UI, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number 
-and click the **OK** button. You’re redirected to the **`https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai`** URL, 
-where **accountname** is your account name. Click the **interactive UI** link on the welcome page. 
-This UI is built from the [Open Source Swagger UI](https://swagger.io/tools/swagger-ui)
-renders the generated **/openapi** document into a very user friendly page.
+To visit the UI, select **Launch Application** from the menu of the IDE, 
+type in **9080** to specify the port number and click the **OK** button. 
+You’re redirected to a URL similar to **`https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai`**, 
+where **accountname** is your account name. 
+Click the **interactive UI** link on the welcome page. 
+This UI is built from the [Open Source Swagger UI](https://swagger.io/tools/swagger-ui), 
+which renders the generated **/openapi** document into a very user friendly page.
 endif::[]
 
 [role='command']
